model notifications {
  id       Int       @id @default(autoincrement())
  title    String    @db.VarChar
  content  String    @db.VarChar
  read     Boolean
  student  Int?
  teacher  Int?
  students students? @relation(fields: [student], references: [id], onDelete: NoAction, onUpdate: NoAction)
  teachers teachers? @relation(fields: [teacher], references: [id], onDelete: NoAction, onUpdate: NoAction)
}
