model LearningPathNode {
  id                 Int            @id @default(autoincrement())
  learning_object_id String         @db.VarChar
  learning_path_id   String         @db.Uuid
  start_node         Boolean
  learning_object    LearningObject @relation(fields: [learning_object_id], references: [id], onDelete: Cascade, onUpdate: NoAction)
  Learning_path      LearningPath?  @relation(fields: [learning_path_id], references: [id])
  outgoing_edges     Transition[]   @relation("source_node")
  incoming_edges     Transition[]   @relation("destination_node")
}
