model Submission {
  id                   Int              @id @default(autoincrement())
  submission_content   Json             @db.Json
  submission_type      SubmissionType
  group_id             Int
  assignment_id        Int
  learing_path_node_id Int
  graded_by            Int?
  grade                Int
  assignment           Assignment       @relation(fields: [assignment_id], references: [id], onDelete: Cascade, onUpdate: NoAction)
  teacher              Teacher?         @relation(fields: [graded_by], references: [id], onDelete: Cascade, onUpdate: NoAction)
  group                Group            @relation(fields: [group_id], references: [id], onDelete: Cascade, onUpdate: NoAction)
  learning_path_node   LearningPathNode @relation(fields: [learing_path_node_id], references: [id])
}
